--- a/MachineCalculator/Views/AppDatas/Edit.cshtml
+++ b/MachineCalculator/Views/AppDatas/Edit.cshtml
@@ -1,59 +1,67 @@
 ﻿@model MachineCalculator.Models.AppObj
 
+@Html.Partial("~/Views/Shared/Header.cshtml")
 
 @{
-        ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit";
 }
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/site.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <h2>Edit application</h2>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="name" class="control-label"></label>
-                <input asp-for="name" class="form-control" />
-                <span asp-validation-for="name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        @Html.DisplayNameFor(model => model.flag)
-                        <input asp-for="flag" />
-                    </label>
-                </div>
-            </div>
-
-            @for (int i = 0; i < Model.AppParameters.Count; i++)
-            {
-                <div class="form-group">
-                    @Html.DisplayFor(modelItem => Model.AppParameters[i].name)
-                    @Html.HiddenFor(o => o.AppParameters[i].name, new { name = Model.AppParameters[i].name })
-                    <input asp-for="AppParameters[i].load" />
-                    <span asp-validation-for=@Model.AppParameters[i].load class="text-danger"></span>
-                </div>
-            }
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
-</div>
 
 <div>
     <a asp-action="Index" style="font-size: 12pt ; font-weight:600">Back to List</a>
 </div>
 
+<body style="margin: 10px">
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="name" class="control-label"></label>
+                    <input asp-for="name" class="form-control" />
+                    <span asp-validation-for="name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label>
+                            @Html.DisplayNameFor(model => model.flag)
+                            <input asp-for="flag" />
+                        </label>
+                    </div>
+                </div>
+                @{
+                    string[] units = { "mHz/core", "MB", "Mb/s", "Mb", "", "" };
+                }
+                @for (int i = 0; i < Model.AppParameters.Count; i++)
+                {
+                    <div class="form-group">
+                        @Html.DisplayFor(modelItem => Model.AppParameters[i].name)
+                        @Html.HiddenFor(o => o.AppParameters[i].name, new { name = Model.AppParameters[i].name }),
+                        @units[i]
+                        <input asp-for="AppParameters[i].load" class="form-control" />
+                        <span asp-validation-for=@Model.AppParameters[i].load class="text-danger"></span>
+                    </div>
+                }
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" formaction="Create" value="Save as new" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+</body>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
