--- a/MachineCalculator/Views/Projects/Details.cshtml
+++ b/MachineCalculator/Views/Projects/Details.cshtml
@@ -4,34 +4,48 @@
     ViewData["Title"] = "Details";
 }
 
+@Html.Partial("~/Views/Shared/Header.cshtml")
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/site.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<h2>Project etails</h2>
-
-<div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.description)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" style="font-size: 12pt ; font-weight:600">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<h2>Project details</h2>
+<a asp-action="Index" style="font-size: 12pt ; font-weight:600">Back to List</a>
+<body style="margin: 10px">
+    <div>
+        <h4>Project</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.description)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.description)
+            </dd>
+            @for (int i = 0; i < Model.projectApps.Count(); i++)
+            {
+                <dt>
+                    <label>Application №@i: </label>
+                    @Html.DisplayFor(modelItem => modelItem.projectApps[i].AppObj.name)
+                </dt>
+                <dd>
+                    <label>Instances: </label>
+                    @Html.DisplayFor(modelItem => modelItem.projectApps[i].instances)
+                </dd>
+            }
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id" style="font-size: 12pt ; font-weight:600">Edit</a>
+    </div>
+</body>
